# file-walker

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: processed
src/: main.c  main.h  utils.c  utils.h
